feat: Worldspace travelpoints

--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -94,6 +94,7 @@
     <Compile Include="JMF\Blips\BlipColor.cs" />
     <Compile Include="JMF\Blips\BlipSprite.cs" />
     <Compile Include="JMF\Blips\Blip.cs" />
+    <Compile Include="JMF\Entities\Vehicle\VehicleClass.cs" />
     <Compile Include="JMF\World.cs" />
     <Compile Include="JMF\WeatherType.cs" />
     <Compile Include="JMF\Entities\Entity.cs" />
