--- a/JaysModFramework/packages.config
+++ b/JaysModFramework/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LemonUI.RagePluginHook" version="2.1.1" targetFramework="net48" />
   <package id="LemonUI.SHVDN3" version="1.9.4" targetFramework="net48" />
+  <package id="RagePluginHook" version="1.98.0" targetFramework="net48" />
   <package id="ScriptHookVDotNet3" version="3.5.1" targetFramework="net48" />
 </packages>
