feat: create a new save

--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -37,7 +37,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="RagePluginHook, Version=0.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\RagePluginHook.1.98.0\lib\net472\RagePluginHook.dll</HintPath>
+      <HintPath>..\packages\RagePluginHook.1.109.1\lib\net472\RagePluginHook.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -66,6 +66,7 @@
     <Compile Include="JMF.Framework\Database.cs" />
     <Compile Include="JMF.Framework\Config.cs" />
     <Compile Include="JMF.Interiors\IPLSettings.cs" />
+    <Compile Include="JMF.Modules\InternalModules\Saver.cs" />
     <Compile Include="JMF.Universe\Portal.cs" />
     <Compile Include="JMF.Interiors\RoomPortalType.cs" />
     <Compile Include="JMF.Interiors\RoomPortal.cs" />
